Fix linters error

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 .book-card {
-  position:relative;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -45,7 +45,7 @@ h1 {
 
 .book-author::before {
   content: 'by';
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 .book-btn {
@@ -76,10 +76,10 @@ form {
 
 .form-element {
   width: 240px;
-  margin:2px
+  margin: 2px;
 }
 
 #add-btn {
-  float:right;
+  float: right;
   margin-top: 5px;
 }
